Implemented Better Combat attack cancelling rolls

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ modName=Unified Combat
 modGroup=net.kayn
 modid=unified_combat
 author=Kayn
-desc=A compatibility bridge for Irons Spells and Spellbooks, Better Combat, and Combat Roll ? rolling now cancels spellcasting and attacking for a more cohesive combat experience.
+desc=A compatibility bridge for Irons Spells and Spellbooks, Better Combat, and Combat Roll - rolling now cancels spellcasting and attacking for a more cohesive combat experience.
 version=1.0.0
 
 # Forge / MC
